Fix ReplaceSelectionCommand inflating text size on Android

We currently have a problem where replacing a word in a richly editable element
using the Android spell check menu sometimes replaces the word with one of a
larger font size. This is because text autosizing (to make smaller text more
visible on mobile) increases the computed value of the font-size property. So if
we read the computed value off the existing text and try to use it on new text,
we're actually setting a value larger than the original (and, due to font
scaling, it will be increased to an even larger size).

The fix is to make EditingStyle ignore the computed value of the font-size
property and instead use the size from ComputedStyle::SpecifiedFontSize().

Bug: 768261
Change-Id: I9f3aca178fcb6c4105029dc5339d173a888f9a47
Reviewed-on: https://chromium-review.googlesource.com/683229
Commit-Queue: Ryan Landay <rlanday@chromium.org>
Reviewed-by: Philip Rogers <pdr@chromium.org>
Reviewed-by: Xiaocheng Hu <xiaochengh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#504566}
Former-commit-id: 9a75502e33aea7c30eba8ebe16eeb67acfc893d3