third_party/WebKit/Source/core/editing/commands/ReplaceSelectionCommandTest.cpp
@@ -16,6 +16,8 @@
 #include "core/editing/testing/EditingTestBase.h"
 #include "core/frame/LocalFrame.h"
 #include "core/frame/LocalFrameView.h"
+#include "core/frame/Settings.h"
+#include "core/layout/api/LayoutViewItem.h"
 #include "core/testing/DummyPageHolder.h"
 #include "testing/gtest/include/gtest/gtest.h"
 
@@ -104,6 +106,52 @@ TEST_F(ReplaceSelectionCommandTest, styleTagsInPastedHeadIncludedInContent) {
       GetDocument().body()->InnerHTMLAsString())
       << "the STYLE and P elements should have been pasted into the body "
       << "of the document";
+}
+
+// Helper function to set autosizing multipliers on a document.
+bool SetTextAutosizingMultiplier(Document* document, float multiplier) {
+  bool multiplier_set = false;
+  for (LayoutItem layout_item = document->GetLayoutViewItem();
+       !layout_item.IsNull(); layout_item = layout_item.NextInPreOrder()) {
+    if (layout_item.Style()) {
+      layout_item.MutableStyleRef().SetTextAutosizingMultiplier(multiplier);
+
+      EXPECT_EQ(multiplier, layout_item.Style()->TextAutosizingMultiplier());
+      multiplier_set = true;
+    }
+  }
+  return multiplier_set;
+}
+
+// This is a regression test for https://crbug.com/768261
+TEST_F(ReplaceSelectionCommandTest, TextAutosizingDoesntInflateText) {
+  GetDocument().GetSettings()->SetTextAutosizingEnabled(true);
+  GetDocument().setDesignMode("on");
+  SetBodyContent("<div><span style='font-size: 12px;'>foo bar</span></div>");
+  SetTextAutosizingMultiplier(&GetDocument(), 2.0);
+
+  Element* div = GetDocument().QuerySelector("div");
+  Element* span = GetDocument().QuerySelector("span");
+
+  // Select "bar".
+  GetDocument().GetFrame()->Selection().SetSelection(
+      SelectionInDOMTree::Builder()
+          .Collapse(Position(span->firstChild(), 4))
+          .Extend(Position(span->firstChild(), 7))
+          .Build());
+
+  DocumentFragment* fragment = GetDocument().createDocumentFragment();
+  fragment->ParseHTML("baz", span);
+
+  ReplaceSelectionCommand::CommandOptions options =
+      ReplaceSelectionCommand::kMatchStyle;
+
+  ReplaceSelectionCommand* command =
+      ReplaceSelectionCommand::Create(GetDocument(), fragment, options);
+
+  EXPECT_TRUE(command->Apply()) << "the replace command should have succeeded";
+  // The span element should not have been split to increase the font size.
+  EXPECT_EQ(1u, div->CountChildren());
 }
 
 }  // namespace blink
